# PhotorealisticRenderer

./: .gitignore  readme.md
code/: .gitignore  CMakeLists.txt  run_all.sh  run_final.sh
code/cuda/: CMakeLists.txt  run_cuda.sh
code/cuda/include/: Matrix3f.cuh  Matrix4f.cuh  Vector3f.cuh  Vector4f.cuh  boundingBox.cuh  camera.cuh  group.cuh  hit.cuh  image.cuh  light.cuh  material.cuh  mesh.cuh  object3d.cuh  plane.cuh  ray.cuh  renderer.cuh  scene_parser.cuh  sphere.cuh  transform.cuh  triangle.cuh  utils.cuh
code/cuda/src/: Matrix3f.cu  Matrix4f.cu  Vector3f.cu  Vector4f.cu  boundingBox.cu  camera.cu  fast_obj.cu  group.cu  hit.cu  image.cu  light.cu  lodepng.cu  main.cu  material.cu  mesh.cu  object3d.cu  plane.cu  ray.cu  renderer.cu  scene_parser.cu  sphere.cu  transform.cu  triangle.cu  utils.cu
code/include/: BSPTree.hpp  boundingBox.hpp  camera.hpp  curve.hpp  fast_obj.h  group.hpp  hit.hpp  image.hpp  light.hpp  lodepng.h  material.hpp  mesh.hpp  object3d.hpp  plane.hpp  ray.hpp  ray_tracing.hpp  render.hpp  renderer.hpp  revsurface.hpp  scene_parser.hpp  sphere.hpp  transform.hpp  triangle.hpp  utils.hpp  utils_random.hpp
code/mesh/: bunny_1k_n.mtl
code/mesh/gate/: 78934.mtl  78934_n.mtl
code/mesh/gate/textures/: 03-default-basecolor.ppm  04-default-basecolor.ppm  08-default-basecolor.ppm  12-default-basecolor.ppm  17-default-basecolor.ppm  18-default-basecolor.ppm  24-default-basecolor.ppm  default-basecolor.ppm  material-1-basecolor.ppm  material-5-basecolor.ppm
code/mesh/house/: 77881.blend  77881.c4d  77881.dae  77881.max  77881.mtl  77881.skp
code/mesh/low_poly_fox/: 77800.blend  77800.c4d  77800.dae  77800.max  77800.mtl  77800.skp  material_001_basecolor.ppm  material_009_basecolor.ppm
code/mesh/low_poly_fox/textures/: material_002_basecolor.ppm
code/src/: BSPTree.cpp  fast_obj.cpp  image.cpp  lodepng.cpp  main.cpp  material.cpp  mesh.cpp  scene_parser.cpp
code/testcases/: final.txt  scene01_basic.txt  scene08_altered_smallpt.txt  scene09_smallpt.txt  scene10_earth.txt  scene10_texture.txt  scene11_transparentbunny.txt  scene12_norm.txt  scene12_vase.txt  scene13_fox.txt  scene13_vase.txt  scene14_nee.txt  scene15_depth.txt  scene16_glossy.txt  scene17_interpolation.txt  scene18_cudabunny.txt
code/texture/: Earth_Diffuse_1K.tga  stars-1k.ppm
report/: report.md
report/results/: README.txt
